# dynamic-programming-study

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/dp_study/idaa3e/: ch8_2_ex2_9.py  ch8_2_knapsack.py
src/dynamic_programming_study/: change_making.py  coin_collecting.py  coin_row.py  knapsack.py
tests/: test_change_making.py  test_coin_collecting.py  test_coin_row.py  test_knapsack.py
tests/idaa3e/: test_ch8_1_example1_coin_row.py  test_ch8_1_example2_change_making.py  test_ch8_1_example3_coin_collecting.py  test_ch8_2_ex2_9.py  test_ch8_2_knapsack.py
