[project]
name = "dynamic-programming-study"
version = "0.1.0"
description = "dynamic programming study"
authors = [
  { name = "Jerry Lee", email = "oldratlee@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.poetry]
packages = [{ include = "dp_study", from = "src" }]

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-check = "^2.5.3"
pytest-sugar = "^1.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
isort = { extras = ["colors"], version = "^6.0.1" }
mypy = "^1.16.1"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
